fix image alignment

--- a/css/page.css
+++ b/css/page.css
@@ -106,6 +106,16 @@
     }
     .container3 .content {
         padding:10px 30px 30px 30px;
+        text-align:center;
+    }
+    .container3 .content p {
+        text-align:left;
+    }
+    .container3 .content img {
+        display: inline-block;
+        height: 250;
+        padding: 5px;
+        margin: 0 auto;
     }
     .container3 .title-container {
         border:5px solid #101028;
